--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,20 @@
     justify-content: center;
 }
 
+footer{
+    bottom: 0px; 
+    width: 100%; 
+    height: 5vh;
+    margin-top: 0px;
+}
+
+nav li{
+    display: inline;
+    margin: 60px;
+    padding-bottom: 50%;
+    justify-content: center;
+}
+
+.copyright{
+    justify-content: center;
+}
