--- a/css/main.css
+++ b/css/main.css
@@ -3,63 +3,50 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5vh;
+    
 }
 
 .container-1{
     display: flex;
     align-items: center;
-    margin: 200px
-
-    }
-
-.button{
-    background-color: yellow;
-    background: yellow;
-}
-
-
-.container-1{
-    
+    margin-left: 30vh;
+    margin-right: 30vh;
     border: 1px #ccc solid;
     padding: 10px
     color gray;
     flex-direction: column;
-
-    }
-
-.enter-email-box{
-        border: 10px;
-        border-color: gray;
-        }
-
-.enter-password-box{
-    border: 10px;
-    border-color: gray
-    }
-
-.continue{
-    background-color: yellow;
     }
 
 .create-account{
-    display: flex;
-    justify-content: center;
-}
+    font-size: 18px;
+    margin-left: 50vh;
+    margin-top: 5vh;
+    
+
+    }
+
 
 footer{
     bottom: 0px; 
     width: 100%; 
-    height: 5vh;
+    height: 30vh;
     margin-top: 0px;
 }
 
 nav li{
     display: inline;
-    margin: 60px;
-    padding-bottom: 50%;
+    margin: 40px;
+    padding-bottom: 20%;
     justify-content: center;
+    margin: 90px;
+    font-size: 10px
+    
+    
 }
 
 .copyright{
+    display: flex;
     justify-content: center;
+    font-size: 10px
 }
