--- a/css/main.css
+++ b/css/main.css
@@ -9,22 +9,56 @@
 
 .container-1{
     display: flex;
-    align-items: center;
+    align-items: right;
+    padding-left: 20px;
     margin-left: 30vh;
     margin-right: 30vh;
     border: 1px #ccc solid;
-    padding: 10px
-    color gray;
+    padding: 10px;
+    color: black;
     flex-direction: column;
     }
 
+.sign-in{
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+}
+
+.email{
+    font-size: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.have-password{
+    margin-left: 30px;
+    justify-content: space-between;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
+}
+
+.button-continue{
+    display: flex;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .create-account{
     font-size: 18px;
-    margin-left: 50vh;
+    margin-left: 30vh;
+    margin-right: 30vh;
     margin-top: 5vh;
-    
-
+    display: flex;
+    flex-direction: column;
     }
+
+.need-help{
+    margin-left: 5vh;
+    font-size: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 
 footer{
@@ -35,14 +69,15 @@ footer{
 }
 
 nav li{
-    display: inline;
-    margin: 40px;
-    padding-bottom: 20%;
-    justify-content: center;
-    margin: 90px;
-    font-size: 10px
-    
-    
+    display: inline-block;
+    padding-bottom: 10%;
+    font-size: 10px;
+    margin: 10px;
+
+} 
+
+nav a{
+    color: blue;
 }
 
 .copyright{
