--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,11 @@
     font-size: 10px;
 }
 
+/* unvisited link */
+a:link {
+    color: #FF0000;
+}
+
 .button-continue{
     display: flex;
     font-size: 14px;
